# KristVanity

./: .gitignore  CMakeLists.txt  README.md
include/: bytetohex.h  hextobase36.h  krist.h  miner.h  utils.h
src/: bytetohex.cpp  hextobase36.cpp  krist.cpp  main.cpp  miner.cpp  miner.h  nybbletohex.cpp  nybbletohex.h  utils.cpp
